--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.1"
   },
   "scripts": {
